remove other code owners while this thing gets worked out

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,7 +2,7 @@
 
 # Secondary repo maintainers, substitutes of the primary
 # maintainers when they become MIA
-*       @channa-figure @wshin
+*      
 
 # Primary repo maintainers
-*       @VigM-Figure @webbushka @khigh-figure @crussell-figure
+*       @VigM-Figure
