update main location to be within src folder instead of lib

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@provenanceio/walletconnect-js",
   "version": "0.1.0",
   "private": false,
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
