--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": false,
+  "sideEffects": false,
   "main": "src/index.js",
+  "module": "esm/index.js",
   "license": "Apache-2.0",
+  "files": [
+    "lib",
+    "esm"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/provenance-io/walletconnect-js.git"
@@ -25,41 +31,47 @@
     "axios": "0.24.0",
     "base64url": "3.0.1",
     "bip32": "^2.0.6",
-    "formik": "2.2.9",
-    "history": "5.0.1",
-    "prop-types": "^15.7.2",
-    "react": "17.0.2",
-    "react-app-polyfill": "2.0.0",
-    "react-dom": "17.0.2",
-    "react-fast-compare": "3.2.0",
-    "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.0",
-    "redux": "4.1.1",
-    "redux-actions": "2.6.5",
-    "redux-thunk": "2.3.0",
-    "secp256k1": "^4.0.2",
-    "styled-components": "5.3.1"
+    "secp256k1": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "7.13.16",
+    "@babel/core": "7.14.0",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.13.8",
+    "@babel/plugin-proposal-object-rest-spread": "7.13.8",
+    "@babel/plugin-proposal-optional-chaining": "7.13.12",
+    "@babel/plugin-transform-object-assign": "7.12.13",
+    "@babel/plugin-transform-react-constant-elements": "7.13.13",
+    "@babel/plugin-transform-runtime": "7.13.15",
+    "@babel/preset-env": "7.14.1",
+    "@babel/preset-react": "7.13.13",
     "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.2",
+    "babel-plugin-styled-components": "1.12.0",
     "env-cmd": "10.1.0",
-    "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.25.3",
     "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-react": "7.25.3",
+    "eslint": "7.32.0",
     "prettier": "2.4.1",
-    "react-scripts": "4.0.3"
+    "prop-types": "^15.7.2",
+    "react-dom": "17.0.2",
+    "react": "17.0.2"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "clean": "rm -rf ./lib ./esm",
+    "build": "npm run clean && npm run build:commonjs && npm run build:esm",
+    "build:esm": "BABEL_ENV=esm babel src -d esm --extensions \".js,.jsx\" --copy-files",
+    "build:commonjs": "BABEL_ENV=cjs babel ./src --extensions \".js,.tsx\" -d lib --copy-files",
     "build:production": "env-cmd -e default,production npm run build",
     "build:staging": "env-cmd -e default,staging npm run build",
     "lint": "eslint ./src/",
-    "prebuild": "npm run test:all",
+    "prebuild": "npm run test",
+    "prepare": "npm run build",
     "start": "env-cmd -e default react-scripts start",
     "start:cli": "env-cmd -e default,e2e react-scripts -r @cypress/instrument-cra start",
     "test": "",
