--- a/webDemo/package.json
+++ b/webDemo/package.json
@@ -1,13 +1,17 @@
 {
   "name": "walletconnect-js-webdemo",
   "version": "0.1.0",
+  "homepage": "/walletconnect",
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
+    "@provenanceio/walletconnect-js": "file:../esm",
+    "axios": "0.24.0",
     "prop-types": "^15.7.2",
-    "react": "17.0.2",
+    "react": "file:../node_modules/react",
     "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.2",
+    "react-fast-compare": "3.2.0",
     "react-redux": "7.2.5",
     "react-router-dom": "6.0.0-beta.0",
     "redux": "4.1.1",
