--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -48,6 +48,7 @@
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-plugin-styled-components": "1.12.0",
+    "concurrently":"^6.4.0",
     "env-cmd": "10.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -57,6 +58,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-react": "7.25.3",
     "eslint": "7.32.0",
+    "nodemon": "^2.0.15",
     "prettier": "2.4.1",
     "prop-types": "^15.7.2",
     "react-dom": "17.0.2",
@@ -67,15 +69,13 @@
     "build": "npm run clean && npm run build:commonjs && npm run build:esm",
     "build:esm": "BABEL_ENV=esm babel src -d esm --extensions \".js,.jsx\" --copy-files",
     "build:commonjs": "BABEL_ENV=cjs babel ./src --extensions \".js,.jsx\" -d lib --copy-files",
-    "build:production": "env-cmd -e default,production npm run build",
-    "build:staging": "env-cmd -e default,staging npm run build",
-    "lint": "eslint ./src/",
+    "postinstall": "cd webDemo && npm i",
     "prebuild": "npm run test",
     "prepare": "npm run build",
-    "start": "env-cmd -e default react-scripts start",
-    "start:cli": "env-cmd -e default,e2e react-scripts -r @cypress/instrument-cra start",
-    "test": "",
-    "eject": "react-scripts eject"
+    "start:webdemo": "cd webDemo && npm run start",
+    "start:watch": "nodemon -e js --watch src --exec 'npm run build'",
+    "start": "concurrently \"npm run start:watch\" \"npm run start:webdemo\"",
+    "test": ""
   },
   "browserslist": {
     "production": [
