complete overhaul of the webDemo, nuke most of it and just keep it bare bones, it doesn't need redux and themes, just a basic ui.  Fix useEffect return within walletconnect-js

--- a/webDemo/package.json
+++ b/webDemo/package.json
@@ -11,13 +11,7 @@
     "react": "file:../node_modules/react",
     "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.2",
-    "react-fast-compare": "3.2.0",
-    "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.0",
-    "redux": "4.1.1",
-    "redux-actions": "2.6.5",
-    "redux-thunk": "2.3.0",
-    "styled-components": "5.3.1"
+    "styled-components": "file:../node_modules/styled-components"
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
