--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -26,11 +26,11 @@
   "dependencies": {
     "@provenanceio/wallet-lib": "1.0.0",
     "@walletconnect/client": "^1.6.5",
-    "@walletconnect/qrcode-modal": "^1.6.5",
     "@walletconnect/utils": "1.6.6",
     "axios": "0.24.0",
     "base64url": "3.0.1",
     "bip32": "^2.0.6",
+    "qrcode":"^1.5.0",
     "secp256k1": "^4.0.2"
   },
   "devDependencies": {
