--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -8,8 +8,7 @@
   "license": "Apache-2.0",
   "files": [
     "lib",
-    "esm",
-    "checkWebDemo.js"
+    "esm"
   ],
   "repository": {
     "type": "git",
@@ -70,11 +69,9 @@
     "build": "npm run clean && npm run build:commonjs && npm run build:esm",
     "build:esm": "BABEL_ENV=esm babel src -d esm --extensions \".js,.jsx\" --copy-files",
     "build:commonjs": "BABEL_ENV=cjs babel ./src --extensions \".js,.jsx\" -d lib --copy-files",
-    "check:webDemo": "node checkWebDemo.js",
     "install:webDemo": "cd webDemo && npm i",
-    "postinstall": "npm run check:webDemo && npm run install:webDemo",
     "prebuild": "npm run test",
-    "prepare": "npm run build",
+    "prepare": "npm run install:webDemo && npm run build",
     "start:webdemo": "cd webDemo && npm run start",
     "start:watch": "nodemon -e js --watch src --exec 'npm run build'",
     "start": "concurrently \"npm run start:watch\" \"npm run start:webdemo\"",
