--- a/package.json
+++ b/package.json
@@ -69,10 +69,9 @@
     "build": "npm run clean && npm run build:commonjs && npm run build:esm",
     "build:esm": "BABEL_ENV=esm babel src -d esm --extensions \".js,.jsx\" --copy-files",
     "build:commonjs": "BABEL_ENV=cjs babel ./src --extensions \".js,.jsx\" -d lib --copy-files",
-    "install:webDemo": "cd webDemo && npm i",
     "prebuild": "npm run test",
-    "prepare": "npm run install:webDemo && npm run build",
-    "start:webdemo": "cd webDemo && npm run start",
+    "prepare": "npm run build",
+    "start:webdemo": "cd webDemo && npm i && npm run start",
     "start:watch": "nodemon -e js --watch src --exec 'npm run build'",
     "start": "concurrently \"npm run start:watch\" \"npm run start:webdemo\"",
     "test": ""
