--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "0.1.30",
+  "version": "0.1.31",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -31,10 +31,10 @@
     "bip32": "2.0.6",
     "google-protobuf": "3.19.1",
     "prop-types": "15.7.2",
-    "qrcode":"1.5.0",
-    "react":"17.0.2",
+    "qrcode": "1.5.0",
+    "react": "17.0.2",
     "secp256k1": "4.0.2",
-    "styled-components":"5.3.3"
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
     "@babel/cli": "7.13.16",
@@ -48,19 +48,20 @@
     "@babel/plugin-transform-runtime": "7.13.15",
     "@babel/preset-env": "7.14.1",
     "@babel/preset-react": "7.13.13",
+    "@babel/runtime": "7.16.7",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-plugin-styled-components": "1.12.0",
-    "concurrently":"6.4.0",
+    "concurrently": "6.4.0",
     "env-cmd": "10.1.0",
+    "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-react": "7.25.3",
-    "eslint": "7.32.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "nodemon": "2.0.15",
     "prettier": "2.4.1"
   },
