--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "0.1.33-beta",
+  "version": "0.1.33-beta.1",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
