--- a/webDemo/package.json
+++ b/webDemo/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "7.25.3",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.4.1",
+    "react-json-view":"1.21.3",
     "react-scripts": "4.0.3"
   },
   "scripts": {
