--- a/webDemo/package.json
+++ b/webDemo/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.4.1",
     "react-json-view":"1.21.3",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "typescript": "4.5.5"
   },
   "scripts": {
     "start": "node -p \"'export const REACT_APP_WCJS_VERSION = ' + JSON.stringify(require('../package.json').version)\" > src/version.js && react-scripts start"
