--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "0.1.58",
+  "version": "0.1.59",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -54,6 +54,7 @@
     "@types/react-dom": "17.0.11",
     "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.22",
+    "@types/qrcode":"1.4.2",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
     "babel-eslint": "10.1.0",
