--- a/webDemo/package.json
+++ b/webDemo/package.json
@@ -5,30 +5,53 @@
   "license": "Apache-2.0",
   "private": false,
   "devDependencies": {
+    "@babel/cli": "file:../node_modules/@babel/cli",
+    "@babel/core": "file:../node_modules/@babel/core",
+    "@babel/plugin-proposal-class-properties": "file:../node_modules/@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "file:../node_modules/@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-object-rest-spread": "file:../node_modules/@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-optional-chaining": "file:../node_modules/@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-transform-object-assign": "file:../node_modules/@babel/plugin-transform-object-assign",
+    "@babel/plugin-transform-react-constant-elements": "file:../node_modules/@babel/plugin-transform-react-constant-elements",
+    "@babel/plugin-transform-runtime": "file:../node_modules/@babel/plugin-transform-runtime",
+    "@babel/preset-env": "file:../node_modules/@babel/preset-env",
+    "@babel/preset-react": "file:../node_modules/@babel/preset-react",
+    "@babel/preset-typescript": "file:../node_modules/@babel/preset-typescript",
+    "@babel/runtime": "file:../node_modules/@babel/runtime",
     "@provenanceio/walletconnect-js": "file:../esm",
-    "prop-types": "file:../node_modules/prop-types",
-    "react": "file:../node_modules/react",
+    "@types/node": "file:../node_modules/@types/node",
+    "@types/react": "file:../node_modules/@types/react",
+    "@types/react-dom": "file:../node_modules/@types/react-dom",
+    "@types/react-router-dom": "file:../node_modules/@types/react-router-dom",
+    "@types/styled-components": "file:../node_modules/@types/styled-components",
+    "@types/qrcode":"file:../node_modules/@types/",
+    "@typescript-eslint/eslint-plugin": "file:../node_modules/@typescript-eslint/eslint-plugin",
+    "@typescript-eslint/parser": "file:../node_modules/@typescript-eslint/parser",
+    "react": "17.0.2",
     "styled-components": "file:../node_modules/styled-components",
     "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.2",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.25.3",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.4.1",
+    "babel-eslint": "file:../node_modules/babel-eslint",
+    "babel-loader": "file:../node_modules/babel-loader",
+    "babel-plugin-styled-components": "file:../node_modules/babel-plugin-styled-components",
+    "eslint": "file:../node_modules/eslint",
+    "eslint-config-airbnb": "file:../node_modules/eslint-config-airbnb",
+    "eslint-config-airbnb-typescript":"file:../node_modules/eslint-config-airbnb-",
+    "eslint-config-prettier": "file:../node_modules/eslint-config-prettier",
+    "eslint-config-react-app": "file:../node_modules/eslint-config-react-app",
+    "eslint-plugin-cypress": "file:../node_modules/eslint-plugin-cypress",
+    "eslint-plugin-import": "file:../node_modules/eslint-plugin-import",
+    "eslint-plugin-jsx-a11y": "file:../node_modules/eslint-plugin-jsx-a11y",
+    "eslint-plugin-prettier": "file:../node_modules/eslint-plugin-prettier",
+    "eslint-plugin-react": "file:../node_modules/eslint-plugin-react",
+    "eslint-plugin-react-hooks": "file:../node_modules/eslint-plugin-react-hooks",
+    "prettier": "file:../node_modules/prettier",
     "react-json-view":"1.21.3",
     "react-scripts": "4.0.3",
     "typescript": "4.5.5"
   },
   "scripts": {
-    "start": "node -p \"'export const REACT_APP_WCJS_VERSION = ' + JSON.stringify(require('../package.json').version)\" > src/version.js && react-scripts start"
+    "start": "node -p \"'export const REACT_APP_WCJS_VERSION = ' + JSON.stringify(require('../package.json').version)\" > src/version.ts && react-scripts start"
   },
   "browserslist": {
     "production": [
