--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.16.7",
     "@types/node": "17.0.17",
+    "@types/qrcode": "1.4.2",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
     "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.22",
-    "@types/qrcode":"1.4.2",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
     "babel-eslint": "10.1.0",
@@ -64,20 +64,21 @@
     "env-cmd": "10.1.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript":"16.1.0",
+    "eslint-config-airbnb-typescript": "16.1.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "json-schema-to-typescript": "10.1.4",
     "nodemon": "2.0.15",
     "prettier": "2.4.1",
     "typescript": "4.5.5"
   },
   "scripts": {
     "clean": "rm -rf ./lib ./esm",
-    "build": "npm run clean && npm run build:commonjs && npm run build:esm",
+    "build": "npm run clean && npm run build:commonjs && npm run build:esm && npm run tsc:esm && npm run tsc:commonjs",
     "build:esm": "BABEL_ENV=esm babel src -d esm --extensions \".js,.jsx,.ts,.tsx\" --copy-files",
     "build:commonjs": "BABEL_ENV=cjs babel ./src --extensions \".js,.jsx,.ts,.tsx\" -d lib --copy-files",
     "prebuild": "npm run test",
@@ -85,7 +86,9 @@
     "start:webdemo": "cd webDemo && npm i && npm run start",
     "start:watch": "nodemon -e js --watch src --exec 'npm run build'",
     "start": "concurrently \"npm run start:watch\" \"npm run start:webdemo\"",
-    "test": ""
+    "test": "",
+    "tsc:esm": "tsc --module es2015 --outDir esm",
+    "tsc:commonjs": "tsc --module commonjs --outDir lib"
   },
   "browserslist": {
     "production": [
