--- a/webDemo/package.json
+++ b/webDemo/package.json
@@ -10,6 +10,7 @@
     "react": "file:../node_modules/react",
     "styled-components": "file:../node_modules/styled-components",
     "react-app-polyfill": "2.0.0",
+    "react-json-view":"1.21.3",
     "react-dom": "17.0.2",
     "babel-eslint": "10.1.0",
     "eslint": "7.32.0",
