--- a/package.json
+++ b/package.json
@@ -82,19 +82,21 @@
     "build": "npm run clean && npm run build:commonjs && npm run build:esm && npm run tsc:esm && npm run tsc:commonjs",
     "build:esm": "BABEL_ENV=esm babel src -d esm --extensions \".js,.jsx,.ts,.tsx\" --copy-files",
     "build:commonjs": "BABEL_ENV=cjs babel ./src --extensions \".js,.jsx,.ts,.tsx\" -d lib --copy-files",
+    "lint": "eslint src && eslint webDemo",
     "prebuild": "npm run test",
     "prepare": "npm run build",
     "start:webdemo": "cd webDemo && npm i && npm run start",
     "start:watch": "nodemon -e js --watch src --exec 'npm run build'",
     "start": "concurrently \"npm run start:watch\" \"npm run start:webdemo\"",
     "test": "",
-    "tempComments": "echo 'No Special Comments Found...'",
+    "commentSniff": "node -e 'require(\"./commentSniffer.ts\").commentSniffer()'",
     "tsc:esm": "tsc --module es2015 --outDir esm",
     "tsc:commonjs": "tsc --module commonjs --outDir lib"
   },
   "pre-commit": [
+    "lint",
     "test",
-    "tempComments"
+    "commentSniff"
   ],
   "browserslist": {
     "production": [
