--- a/package.json
+++ b/package.json
@@ -73,8 +73,9 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "json-schema-to-typescript": "10.1.4",
     "nodemon": "2.0.15",
-    "pre-commit":"1.2.2",
+    "pre-commit": "1.2.2",
     "prettier": "2.4.1",
+    "pretty-error": "4.0.0",
     "typescript": "4.5.5"
   },
   "scripts": {
