--- a/.huskyrc
+++ b/.huskyrc
@@ -1,5 +1,6 @@
 {
   "hooks": {
-    "pre-push": "npm run lint && npm run test && npm run commentSniff",
+    "pre-push": "npm run lint && npm run test",
+    "pre-commit": "npm run lint && npm run test && npm run commentSniff",
   }
 }
