--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-react": "7.13.13",
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.16.7",
+    "@types/chrome": "0.0.181",
     "@types/node": "17.0.17",
     "@types/qrcode": "1.4.2",
     "@types/react": "17.0.39",
