--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -15,7 +15,8 @@
     "url": "git+https://github.com/provenance-io/walletconnect-js.git"
   },
   "keywords": [
-    "react",
+    "provenance blockchain",
+    "provenance",
     "walletconnect"
   ],
   "author": "Provenance",
@@ -32,7 +33,6 @@
     "bip32": "2.0.6",
     "google-protobuf": "3.16.0",
     "qrcode": "1.5.0",
-    "react": "17.0.2",
     "secp256k1": "4.0.2",
     "styled-components": "5.3.3"
   },
@@ -77,6 +77,7 @@
     "nodemon": "2.0.15",
     "prettier": "2.4.1",
     "pretty-error": "4.0.0",
+    "react": "17.0.2",
     "typescript": "4.5.5"
   },
   "scripts": {
