create new umd build for cdns.  Update import of WalletService from wallet-lib.  Create new webpack process for making minimized full bundle into umd folder

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -43,6 +43,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.13.8",
     "@babel/plugin-proposal-object-rest-spread": "7.13.8",
     "@babel/plugin-proposal-optional-chaining": "7.13.12",
+    "@babel/plugin-transform-modules-commonjs": "7.18.0",
     "@babel/plugin-transform-object-assign": "7.12.13",
     "@babel/plugin-transform-react-constant-elements": "7.13.13",
     "@babel/plugin-transform-runtime": "7.13.15",
@@ -61,7 +62,10 @@
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-plugin-styled-components": "1.12.0",
+    "buffer": "6.0.3",
     "concurrently": "6.4.0",
+    "crypto-browserify": "3.12.0",
+    "css-loader": "^6.7.1",
     "env-cmd": "10.1.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -72,19 +76,28 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "file-loader": "6.2.0",
     "husky": "4.3.0",
     "json-schema-to-typescript": "10.1.4",
     "nodemon": "2.0.15",
     "prettier": "2.4.1",
     "pretty-error": "4.0.0",
+    "process": "0.11.10",
     "react": "17.0.2",
-    "typescript": "4.5.5"
+    "stream-browserify": "3.0.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.0",
+    "typescript": "4.5.5",
+    "util": "0.12.4",
+    "webpack": "5.72.1",
+    "webpack-cli": "4.9.2"
   },
   "scripts": {
-    "clean": "rm -rf ./lib ./esm",
-    "build": "npm run clean && npm run build:commonjs && npm run build:esm && npm run tsc:esm && npm run tsc:commonjs",
+    "clean": "rm -rf ./lib ./esm ./umd",
+    "build": "npm run clean && npm run build:commonjs && npm run build:esm && npm run build:umd && npm run tsc:esm && npm run tsc:commonjs",
     "build:esm": "BABEL_ENV=esm babel src -d esm --extensions \".js,.jsx,.ts,.tsx\" --copy-files",
     "build:commonjs": "BABEL_ENV=cjs babel ./src --extensions \".js,.jsx,.ts,.tsx\" -d lib --copy-files",
+    "build:umd": "webpack",
     "lint": "eslint src && eslint webDemo",
     "prebuild": "npm run test",
     "prepare": "npm run build",
