--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/provenance-io/walletconnect-js#readme",
   "dependencies": {
     "@babel/runtime": "7.16.7",
-    "@provenanceio/wallet-lib": "1.1.1",
+    "@provenanceio/wallet-utils": "1.0.1",
     "@walletconnect/client": "1.6.5",
     "@walletconnect/utils": "1.6.6",
     "base64url": "3.0.1",
@@ -52,11 +52,13 @@
     "@babel/preset-react": "7.13.13",
     "@babel/preset-typescript": "7.16.7",
     "@types/chrome": "0.0.181",
+    "@types/google-protobuf": "3.15.6",
     "@types/node": "17.0.17",
     "@types/qrcode": "1.4.2",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
     "@types/react-router-dom": "5.3.3",
+    "@types/secp256k1": "4.0.3",
     "@types/styled-components": "5.1.22",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
