--- a/webDemoVanilla/es6/package.json
+++ b/webDemoVanilla/es6/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@provenanceio/walletconnect-js": "file:../../",
+    "@provenanceio/walletconnect-js": "file:../../webdemoPkg",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
     "file-loader": "6.2.0",
