--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,12 @@ jobs:
       - name: Use Node.js 14.6.0
         uses: actions/setup-node@v1
         with:
-          node-version: '14.6.0'
+          node-version: "14.6.0"
 
       - name: Install Protoc
         uses: arduino/setup-protoc@v1
         with:
-          version: '3.x'
+          version: "3.x"
 
       - name: Install npm packages
         run: |
@@ -27,8 +27,14 @@ jobs:
         env:
           CI: true
 
+      - name: Build folders for npm
+        run: |
+          npm run build
+        env:
+          CI: true
+
       - name: NPM Publish
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{secrets.NPM_TOKEN}}
-          access: 'public'
+          access: "public"
