update demo background

--- a/webDemo/.gitignore
+++ b/webDemo/.gitignore
@@ -21,6 +21,7 @@
 /docs
 /cdn
 /umd
+/src/version.ts
 
 # misc
 .DS_Store
@@ -37,5 +38,4 @@ yarn-error.log*
 *.ignored.*
 ignored/
 .eslintcache
-
 *.tgz
