--- a/examples/example-react/package.json
+++ b/examples/example-react/package.json
@@ -4,11 +4,11 @@
   "homepage": "/walletconnect",
   "private": true,
   "dependencies": {
+    "@microlink/react-json-view": "1.22.2",
     "@provenanceio/walletconnect-js": "file:../@provenanceio-wcjs-local",
     "react": "file:../../node_modules/react",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
-    "react-json-formatter": "0.3.2",
     "react-router-dom": "6.4.2",
     "styled-components": "file:../../node_modules/styled-components",
     "styled-normalize": "^8.0.7"
