--- a/examples/example-react/package.json
+++ b/examples/example-react/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.8.3",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "webpack-bundle-analyzer": "^4.6.1"
   },
   "scripts": {
     "start": "node -p \"'export const REACT_APP_WCJS_VERSION = ' + JSON.stringify(require('../@provenanceio-wcjs-local/package.json').version)\" > src/version.ts && react-app-rewired start",
