--- a/examples/example-react/package.json
+++ b/examples/example-react/package.json
@@ -18,20 +18,14 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "5.1.26",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
     "file-loader": "^6.2.0",
-    "process": "^0.11.10",
-    "react-app-rewired": "2.2.1",
     "react-scripts": "5.0.1",
-    "stream-browserify": "^3.0.0",
     "typescript": "^4.8.3",
-    "util": "^0.12.4",
     "webpack-bundle-analyzer": "^4.6.1"
   },
   "scripts": {
-    "start": "node -p \"'export const REACT_APP_WCJS_VERSION = ' + JSON.stringify(require('../@provenanceio-wcjs-local/package.json').version)\" > src/version.ts && react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "node -p \"'export const REACT_APP_WCJS_VERSION = ' + JSON.stringify(require('../@provenanceio-wcjs-local/package.json').version)\" > src/version.ts && react-scripts start",
+    "build": "react-scripts build",
     "build:staging": "npm run build"
   },
   "eslintConfig": {
