--- a/examples/example-js-es6/package.json
+++ b/examples/example-js-es6/package.json
@@ -11,12 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@provenanceio/walletconnect-js": "file:../@provenanceio-wcjs-local",
-    "buffer": "6.0.3",
-    "crypto-browserify": "3.12.0",
-    "file-loader": "6.2.0",
-    "process": "0.11.10",
-    "stream-browserify": "3.0.0",
-    "util": "0.12.4"
+    "file-loader": "6.2.0"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
