--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "build": "npm run clean && npm run build:commonjs && npm run build:esm && npm run build:umd && npm run tsc:esm && npm run tsc:commonjs",
     "build:local": "npm run clean && npm run build:commonjs && npm run build:esm && npm run tsc:esm && npm run tsc:commonjs && npm run build:exampleLocalPkg",
     "clean": "rm -rf ./lib ./esm ./umd ./examples/@provenanceio-wcjs-local",
-    "commentSniff": "node -e 'require(\"./scripts/commentSniffer.ts\").commentSniffer()'",
+    "commentSniff": "node -e 'require(\"./scripts/commentSniffer.js\").commentSniffer()'",
+    "build:demo": "node -e 'require(\"./scripts/buildDemo.js\").buildDemo()'",
     "copy:toLocalExample:esm": "cp -r ./esm ./examples/@provenanceio-wcjs-local || copy -r ./esm ./examples/@provenanceio-wcjs-local",
     "copy:toLocalExample:lib": "cp -r ./lib ./examples/@provenanceio-wcjs-local || copy -r ./lib ./examples/@provenanceio-wcjs-local",
     "copy:toLocalExample:package": "cp -r package.json ./examples/@provenanceio-wcjs-local || copy -r package.json ./examples/@provenanceio-wcjs-local",
