--- a/examples/example-react/package.json
+++ b/examples/example-react/package.json
@@ -1,17 +1,17 @@
 {
   "name": "webdemo",
-  "version": "1.3.1",
+  "version": "2.1.3",
   "homepage": "/walletconnect",
   "private": true,
   "dependencies": {
     "@microlink/react-json-view": "1.22.2",
     "@provenanceio/wallet-utils": "2.4.1",
     "@provenanceio/walletconnect-js": "file:../@provenanceio-wcjs-local",
-    "react": "file:../../node_modules/react",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
     "react-router-dom": "6.4.2",
-    "styled-components": "file:../../node_modules/styled-components",
+    "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
@@ -21,8 +21,7 @@
     "@types/styled-components": "5.1.26",
     "file-loader": "^6.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.3",
-    "webpack-bundle-analyzer": "^4.6.1"
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "node -p \"'export const REACT_APP_WCJS_VERSION = ' + JSON.stringify(require('../@provenanceio-wcjs-local/package.json').version)\" > src/version.ts && react-scripts start",
