quick fixes for slight issues since last deploy.  Fixed favicons and packagejson problems

--- a/examples/example-react/public/manifest.json
+++ b/examples/example-react/public/manifest.json
@@ -1,6 +1,13 @@
 {
-  "short_name": "wcjs-example-react",
-  "name": "wcjs-example-react",
+  "short_name": "figure-tech-walletconnect-js-demo",
+  "name": "figure-tech-walletconnect-js-demo",
+  "icons": [
+    {
+      "src": "favicon-32x32.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    }
+  ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
