--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -36,7 +36,6 @@
     "qrcode": "1.5.1",
     "secp256k1": "4.0.3",
     "stream": "npm:stream-browserify@3.0.0",
-    "styled-components": "^5.3.6",
     "util": "npm:util@0.12.5"
   },
   "devDependencies": {
@@ -88,6 +87,7 @@
     "pretty-error": "4.0.0",
     "process": "0.11.10",
     "react": "^18.2.0",
+    "styled-components": "^5.3.6",
     "style-loader": "3.3.1",
     "ts-loader": "9.4.1",
     "typescript": "4.8.3",
@@ -103,7 +103,7 @@
     "build:local": "npm run clean && npm run build:commonjs && npm run build:esm && npm run tsc:esm && npm run tsc:commonjs && npm run build:exampleLocalPkg",
     "clean": "rm -rf ./lib ./esm ./umd ./examples/@provenanceio-wcjs-local",
     "commentSniff": "node -e 'require(\"./scripts/commentSniffer.js\").commentSniffer()'",
-    "build:demo": "node -e 'require(\"./scripts/buildDemo.js\").buildDemo()'",
+    "build:demo": "node -e 'require(\"./scripts/buildDemo.js\").buildDemo()' && cd figure-tech-walletconnect && npm i --package-lock-only",
     "copy:toLocalExample:esm": "cp -r ./esm ./examples/@provenanceio-wcjs-local || copy -r ./esm ./examples/@provenanceio-wcjs-local",
     "copy:toLocalExample:lib": "cp -r ./lib ./examples/@provenanceio-wcjs-local || copy -r ./lib ./examples/@provenanceio-wcjs-local",
     "copy:toLocalExample:package": "cp -r package.json ./examples/@provenanceio-wcjs-local || copy -r package.json ./examples/@provenanceio-wcjs-local",
