--- a/package.json
+++ b/package.json
@@ -98,21 +98,15 @@
     "build:commonjs": "BABEL_ENV=cjs babel ./src --extensions \".js,.jsx,.ts,.tsx\" -d lib --copy-files",
     "build:esm": "BABEL_ENV=esm babel src -d esm --extensions \".js,.jsx,.ts,.tsx\" --copy-files",
     "build:umd": "webpack",
-    "build:exampleLocalPkg": "mkdir ./examples/@provenanceio-wcjs-local && npm run copy:toLocalExample",
+    "build:pack": "npm run clean && npm run build:commonjs && npm run tsc:commonjs && npm pack --pack-destination './examples'",
     "build": "npm run clean && npm run build:commonjs && npm run build:esm && npm run build:umd && npm run tsc:esm && npm run tsc:commonjs",
-    "build:local": "npm run clean && npm run build:commonjs && npm run build:esm && npm run tsc:esm && npm run tsc:commonjs && npm run build:exampleLocalPkg",
-    "clean": "rm -rf ./lib ./esm ./umd ./examples/@provenanceio-wcjs-local",
+    "clean": "rm -rf ./lib ./esm ./umd ./examples/provenanceio-walletconnect-js-*.tgz",
     "commentSniff": "node -e 'require(\"./scripts/commentSniffer.js\").commentSniffer()'",
     "build:demo": "node -e 'require(\"./scripts/buildDemo.js\").buildDemo()' && cd figure-tech-walletconnect && npm i --package-lock-only",
-    "copy:toLocalExample:esm": "cp -r ./esm ./examples/@provenanceio-wcjs-local || copy -r ./esm ./examples/@provenanceio-wcjs-local",
-    "copy:toLocalExample:lib": "cp -r ./lib ./examples/@provenanceio-wcjs-local || copy -r ./lib ./examples/@provenanceio-wcjs-local",
-    "copy:toLocalExample:package": "cp -r package.json ./examples/@provenanceio-wcjs-local || copy -r package.json ./examples/@provenanceio-wcjs-local",
-    "copy:toLocalExample": "npm run copy:toLocalExample:esm && npm run copy:toLocalExample:lib && npm run copy:toLocalExample:package",
     "start:example-react": "cd examples/example-react && npm i && npm run start",
-    "lint": "eslint src && eslint examples",
     "prebuild": "npm run test",
-    "start:watch": "nodemon -e js,ts,tsx --watch src --exec 'npm run build'",
-    "start": "npm run build:local && npm run start:example-react",
+    "start:watch": "nodemon -e js,ts,tsx --watch src --exec 'npm run build:pack && npm run start:example-react'",
+    "start": "npm run start:watch && npm run start:example-react",
     "test": "",
     "tsc:commonjs": "tsc --module commonjs --outDir lib",
     "tsc:esm": "tsc --module es2015 --outDir esm",
