--- a/examples/example-react/package.json
+++ b/examples/example-react/package.json
@@ -6,28 +6,29 @@
   "dependencies": {
     "@microlink/react-json-view": "1.22.2",
     "@provenanceio/wallet-utils": "2.4.1",
-    "@provenanceio/walletconnect-js": "file:../@provenanceio-wcjs-local",
-    "react": "file:../../node_modules/react",
-    "react-dom": "^18.2.0",
+    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.0.0.tgz",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
-    "react-router-dom": "6.4.2",
-    "styled-components": "file:../../node_modules/styled-components",
-    "styled-normalize": "^8.0.7"
+    "react-router-dom": "6.6.2",
+    "styled-components": "5.3.6",
+    "styled-normalize": "8.0.7"
   },
   "devDependencies": {
-    "@types/create-hash": "^1.2.2",
+    "@types/create-hash": "1.2.2",
     "@types/node": "^16.11.62",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@types/secp256k1": "4.0.3",
     "@types/styled-components": "5.1.26",
-    "@types/secp256k1": "^4.0.3",
-    "file-loader": "^6.2.0",
+    "file-loader": "6.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.3"
+    "typescript": "4.8.3"
   },
   "scripts": {
     "clean:cache": "rm -rf ./node_modules/.cache",
-    "start": "clean:cache && react-scripts start",
+    "start:basic": "react-scripts start",
+    "start": "clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz && react-scripts start",
     "build": "react-scripts build",
     "build:staging": "npm run build"
   },
