--- a/examples/example-react/package.json
+++ b/examples/example-react/package.json
@@ -1,12 +1,12 @@
 {
   "name": "webdemo",
-  "version": "2.1.8",
+  "version": "2.2.0",
   "homepage": "/walletconnect",
   "private": true,
   "dependencies": {
     "@microlink/react-json-view": "1.22.2",
     "@provenanceio/wallet-utils": "2.4.1",
-    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.0.0.tgz",
+    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-2.1.8.tgz",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
@@ -28,7 +28,7 @@
   "scripts": {
     "clean:cache": "rm -rf ./node_modules/.cache",
     "start:basic": "react-scripts start",
-    "start": "clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz && react-scripts start",
+    "start": "npm run clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz && react-scripts start",
     "build": "react-scripts build",
     "build:staging": "npm run build"
   },
