--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,6 +5,4 @@
 *      
 
 # Primary repo maintainers
-*       @VigM-Figure
-*       @webbushka
-*       @jarrydallison
+*       @VigM-Figure @webbushka @jarrydallison
