--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - develop
 
 jobs:
   build:
@@ -33,8 +34,17 @@ jobs:
         env:
           CI: true
 
-      - name: NPM Publish
+      - name: NPM Publish Main
+        if: github.base_ref == 'refs/heads/main'
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{secrets.NPM_TOKEN}}
+          access: "public"
+
+      - name: NPM Publish Develop
+        if: github.base_ref == 'refs/heads/develop'
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{secrets.NPM_TOKEN}}
+          tag: "develop"
           access: "public"
