create new react-vite example app.  Start switching default react demo to react-vite demo instead

--- a/package.json
+++ b/package.json
@@ -103,8 +103,8 @@
     "clean": "rm -rf ./lib ./esm ./umd ./examples/provenanceio-walletconnect-js-*.tgz",
     "commentSniff": "node -e 'require(\"./scripts/commentSniffer.js\").commentSniffer()'",
     "build:demo": "node -e 'require(\"./scripts/buildDemo.js\").buildDemo()' && cd figure-tech-walletconnect && npm i --package-lock-only",
-    "start:example-react": "cd examples/example-react && npm i && npm run start",
-    "watch:example-react": "cd examples/example-react && npm run start",
+    "start:example-react": "cd examples/example-react-vite && npm i && npm run start",
+    "watch:example-react": "cd examples/example-react-vite && npm run start",
     "prebuild": "npm run test",
     "start:watch": "nodemon -e js,ts,tsx --watch src --exec 'npm run build:pack && npm run watch:example-react'",
     "start": "npm run start:watch && npm run start:example-react",
