--- a/examples/example-react-vite/package.json
+++ b/examples/example-react-vite/package.json
@@ -8,13 +8,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "clean:cache": "rm -rf ./node_modules/.cache",
-    "start": "npm run clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz && npm run dev"
+    "clean:cache": "rm -rf ./node_modules/.vite",
+    "start": "npm run clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz && npm run dev",
+    "start_old": "npm run dev"
   },
   "dependencies": {
     "@microlink/react-json-view": "1.22.2",
     "@provenanceio/wallet-utils": "2.4.1",
-    "@provenanceio/walletconnect-js": "3.0.0-develop.7",
+    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.0.0-develop.7.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
@@ -32,7 +33,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vite-tsconfig-paths": "4.0.3",
-    "vite-plugin-node-polyfills": "0.7.0"
+    "vite-plugin-node-polyfills": "0.7.0",
+    "vite-tsconfig-paths": "4.0.3"
   }
 }
