--- a/examples/example-react-vite/package.json
+++ b/examples/example-react-vite/package.json
@@ -1,7 +1,7 @@
 {
   "name": "example-react-vite",
   "private": true,
-  "version": "3.0.0-develop.9",
+  "version": "3.0.0-develop.10",
   "homepage": "/walletconnect",
   "type": "module",
   "scripts": {
@@ -10,12 +10,13 @@
     "preview": "vite preview",
     "clean:cache": "rm -rf ./node_modules/.vite",
     "start": "npm run clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz && npm run dev",
-    "start_old": "npm run dev"
+    "start_old": "npm run dev",
+    "start:host": "npm run dev --host"
   },
   "dependencies": {
     "@microlink/react-json-view": "1.22.2",
     "@provenanceio/wallet-utils": "2.4.1",
-    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.0.0-develop.9.tgz",
+    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.0.0-develop.10.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
