--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "prebuild": "npm run test",
     "start:watch": "nodemon -e js,ts,tsx --watch src --exec 'npm run build:pack && npm run watch:example-react'",
     "start": "npm run start:watch && npm run start:example-react",
-    "test": "jest --watch",
+    "test": "jest",
     "tsc:commonjs": "tsc --module commonjs --outDir lib",
     "tsc:esm": "tsc --module es2015 --outDir esm",
     "versionUp": "node -e 'require(\"./scripts/versionUp.js\").versionUp()'",
