--- a/examples/example-js-es6/package.json
+++ b/examples/example-js-es6/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wcjs-example-es6",
-  "version": "3.0.0-develop.17",
+  "version": "3.0.0-develop.18",
   "description": "testing walletconnect-js with a non-react js app",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.0.0-develop.17.tgz",
+    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-${npm_package_version}.tgz",
     "file-loader": "6.2.0"
   },
   "devDependencies": {
