--- a/examples/example-react-vite/package.json
+++ b/examples/example-react-vite/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@microlink/react-json-view": "1.22.2",
     "@provenanceio/wallet-utils": "2.8.0",
-    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.0.0-develop.23.tgz",
+    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.0.0-develop.24.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
@@ -32,9 +32,25 @@
     "@types/secp256k1": "4.0.3",
     "@types/styled-components": "5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "8.36.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "2.7.1",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0",
+    "vite": "4.2.1",
     "vite-plugin-node-polyfills": "0.7.0",
-    "vite-tsconfig-paths": "4.0.3"
+    "vite-tsconfig-paths": "4.0.7"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "prettier"
+    ]
   }
 }
