--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "sideEffects": false,
   "main": "lib/index.js",
   "license": "Apache-2.0",
-  "typings": "./esm/index.d.ts",
+  "typings": "./lib/index.d.ts",
   "files": [
     "lib",
     "esm",
@@ -71,14 +71,14 @@
     "css-loader": "6.7.1",
     "enquirer": "2.3.6",
     "env-cmd": "10.1.0",
-    "eslint": "8.24.0",
+    "eslint": "8.36.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "file-loader": "6.2.0",
     "husky": "8.0.1",
