--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "3.0.0",
+  "version": "3.0.1-develop.1",
   "private": false,
   "sideEffects": false,
   "main": "lib/index.js",
@@ -11,6 +11,9 @@
     "esm",
     "umd"
   ],
+  "import": {
+    ".": "./esm/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/provenance-io/walletconnect-js.git"
