update to have a new removePendingMethod method in wcjs. Update demo to handle setting customId with methods to reference them

--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,6 @@ yarn-error.log*
 ignored/
 .eslintcache
 /examples/@provenanceio-wcjs-local
+/examples/example-react-vite/provenanceio-walletconnect-js-*.tgz
 /figure-tech-walletconnect
 *.tgz
